# syano-marketplace0

./: .gitattributes  .replit  RECOVERY_GUIDE.md  SYANO_MASTER_RECOVERY.md  backup.b64  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.manifest.json  proxy.mjs  pyproject.toml  replit.md  schema.b64  schema.sql  seed-5000-products.js  skills-lock.json  tsconfig.base.json  tsconfig.json
.agents/: agent_assets_metadata.toml
artifacts/embedding-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--5-Souk-Compass-Homepage-What-Why-Replace-the-marketpla_1783281603849.txt  Pasted--A7-VISIBILITY-INTEGRATION-VERIFICATION-MANDATORY-STOP-_1781852772749.txt  Pasted--CRITICAL-MULTI-LANGUAGE-CONSISTENCY-FIX--1778851395402_1778851395402.txt  Pasted--CRITICAL-NOTE-READ-BEFORE-DOING-ANYTHING-The-Embedding_1781615572969.txt  Pasted--CRITICAL-NOTE-READ-BEFORE-DOING-ANYTHING-The-Embedding_1781616195510.txt  Pasted--CRITICAL-NOTE-READ-BEFORE-DOING-ANYTHING-The-Embedding_1781617986205.txt  Pasted--CRITICAL-NOTE-READ-BEFORE-DOING-ANYTHING-The-Embedding_1781619755381.txt  Pasted--CRITICAL-NOTE-READ-BEFORE-DOING-ANYTHING-The-Embedding_1781621216620.txt  Pasted--CRITICAL-SECURITY-CORRECTNESS-REMEDIATION-SYANO-Platfo_1782894444723.txt  Pasted--GLOBAL-UI-SPACING-ALIGNMENT-CONSISTENCY-REFIN-17788519_1778851945411.txt  Pasted--MASTER-FULL-PROJECT-AUDIT-MIGRATION-VALIDATION-You-are_1780690068987.txt  Pasted--MASTER-PERFORMANCE-SMOOTHNESS-MOTION-OPTIMIZATION-AGEN_1780708008339.txt  (+587 more)
project-memory/: API_STATE.md  AUTH_STATE.md  CHANGELOG.md  (+8 more)
(+513 files in other folders)
